--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,15 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
-.wrapper{
-    padding-left: 500px;
-    padding-right: 300px;
-    max-width: 1170px;
-    margin: 0 auto;
+.header img{
+    height: px;
+    width: 220px;
 }
 
 .header{
     background-color: #4682A9;
     color: #fffdef;              
-    padding: 12px 0;
+    padding: 6px 0;
     width: 100%;
 }
 
@@ -21,8 +19,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 
 
 }
@@ -32,25 +30,16 @@ body {
     display: flex;
     list-style-type: none;
     padding-left: 0;
-    font-weight: 700;
-    text-transform: uppercase;
+    font-size: 20px; 
+    font-weight: 550;
 }
 
 .textnav>li{
-    padding-left: 23px;
-    margin-left: 22px;
+    padding-left: 20px;
+    margin-left: 20px;
     position: relative;
 }
 
-.textnav>li::before{
-    content: '';
-    display: block; 
-    width: 2px;
-    height: 100%;
-    background-color: #FFFBDE;
-    position: absolute;
-    left: 0;
-}
 
 .textnav>li:first-child::before{
     display: none;
@@ -60,6 +49,25 @@ body {
     text-decoration: none;
     color: #FFFBDE;
     text-align: right;
-    margin-right: 30px;
+    margin-right: 25px;
 }
 
+
+.mainpage{
+    padding-top: 200px;
+    padding-bottom: 300px;
+}
+.maintext{
+    font-size: 44px;
+}
+
+.subtitle{
+    font-size: 18px;
+}
+
+footer {
+    color: #30465A;
+    padding: 20px 0;
+    text-align: center;
+    font-weight: 200;
+}
