--- a/css/style.css
+++ b/css/style.css
@@ -119,9 +119,30 @@ body {
     color: #59758A;
 }
 
+
+.mainpage-2{
+    padding-top: 80px;
+    padding-bottom: 200px;
+}
+.maintext{
+    color: #749BC2;
+    font-size: 60px;
+    text-align: center
+}
+.subtitle-2{
+    color: #5F707C;
+    font-size: 20px;
+    max-width: 1000px;      /* Максимальная ширина — не больше 1170px */
+    margin: 0 auto;         /* Отцентрировать по горизонтали */
+    padding-left: 20px;     /* Внутренние отступы (по желанию) */
+    padding-right: 20px;
+    text-align: center;
+}
+
 footer {
     color: #30465A;
+    font-size: 18px;
     padding: 20px 0;
     text-align: center;
-    font-weight: 200;
+    font-weight: 500;
 }
