--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,6 @@ body {
     width: 220px;
 }
 
-
-
 .header{
     background-color: #4682A9;
     color: #fffdef;              
@@ -40,7 +38,6 @@ body {
     margin-left: 20px;
     position: relative;
 }
-
 
 .textnav>li:first-child::before{
     display: none;
@@ -82,53 +79,67 @@ body {
     height: 347px;
     width: 347px;
 }
+
 .spisok img{
     height: 347px;
     width: 347px;
     float: right; /* Выравнивание по правому краю */
     margin: 0 0 5px 5px; /* Отступы вокруг фотографии */
-    padding-top: 180px;
+    padding-top: 50px;
     padding-bottom: 200px;
 }
 
-.AI{
-    padding-top: 180px;
-    padding-bottom: 200px;
-}
+
+
 .text {
     background: #4682A9;
     color: #FFFBDE;
-    padding: 14px 28px;        /* отступы внутри рамки */
-    border-radius: 50px;
-    font-size: 26px;
+    padding: 20px 28px;        /* отступы внутри рамки */
+    border-radius: 62px;
+    font-size: 32px;
     text-align: center;
-
     /* Центрирование по горизонтали */
     display: block;            /* ← обязательно! */
-    max-width: 1100px;
-    margin: 5px auto 0;      /* сверху 225px, по бокам auto → центр */
-    /* padding-left/right НЕ нужно — уже заданы в padding выше */
+    max-width: 1300px;
+    margin: 25px auto 0;      /* сверху 225px, по бокам auto → центр */
 }
 
 .name{
     color: #406890;
     font-size: 44px;
     font-weight: 700;
-}
-.spisok{
-    color: #59758A;
+    padding: 0; 
+    margin-left: 150px;
+
 }
 
+.spisok{
+    color: #FFFBDE;
+    font-size: 30px;
+}
+.textlist{
+
+    background: #4682A9;
+    padding: 20px 15px;
+    border-radius: 50px;
+    text-align: left;
+    display: block;         
+    max-width: 1100px;
+    margin: 20px auto 0;    
+
+}
 
 .mainpage-2{
     padding-top: 80px;
     padding-bottom: 200px;
 }
+
 .maintext{
     color: #749BC2;
     font-size: 60px;
     text-align: center
 }
+
 .subtitle-2{
     color: #5F707C;
     font-size: 20px;
@@ -138,6 +149,13 @@ body {
     padding-right: 20px;
     text-align: center;
 }
+
+.AI{
+    padding-top: 220px;
+    padding-bottom: 200px;
+    
+}
+
 
 footer {
     color: #30465A;
