--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@ body {
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
 }
 
+/* -------------------------------------------------- */
+
 /*пространство для текста на баннере*/
 
 .navigation{
