--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@ body {
     padding-bottom: 4px;
 }
 
+/* -------------------------------------------------- */
+
 /*оформление текста на баннере*/
 
 .textnav
