--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body {
 /* -------------------------------------------------- */
 
 .mainpage{
-    padding-top: 180px;
+    padding-top: 200px;
     padding-bottom: 120px;
 }
 
@@ -76,6 +76,8 @@ body {
     height: 347px;
     width: 347px;
 }
+
+/* -------------------------------------------------- */
 
 .maintext{
     color: #749BC2;
