--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
 
 .mainpage{
     padding-top: 200px;
-    padding-bottom: 120px;
+    padding-bottom: 100px;
 }
 
 .mainpage img{
@@ -104,18 +104,30 @@ body {
     width: 347px;
 }
 
+/*текст в рамке*/
 .text {
     background: #4682A9;
     color: #FFFBDE;
     padding: 20px 28px;        /* отступы внутри рамки */
     border-radius: 62px;
-    font-size: 32px;
+    font-size: 30px;
     text-align: center;
     /* Центрирование по горизонтали */
     display: block;            /* ← обязательно! */
-    max-width: 1250px;
+    max-width: 1100px;
     margin: 25px auto 0;      /* сверху 225px, по бокам auto → центр */
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
+}
+
+/* -------------------------------------------------- */
+/*нзвание списка*/
+.name{
+    color: #406890;
+    font-size: 46px;
+    font-weight: 700;
+    padding: 0; 
+    margin-top: 200px;
+    margin-left: 70px;
 }
 
 /* -------------------------------------------------- */
@@ -135,50 +147,19 @@ body {
 /* -------------------------------------------------- */
 
 .textspisok{
-
     background: #4682A9;
     padding: 30px 15px;
     border-radius: 35px;
     text-align: left;
     display: block;         
-    max-width: 1000px;
-    margin: 20px auto 0;    
+    max-width: 900px;  
+    margin: 18px 0 0 150px;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
 }
 
 /* -------------------------------------------------- */
 
-.name{
-    color: #406890;
-    font-size: 44px;
-    font-weight: 700;
-    padding: 0; 
-    margin-top: 200px;
-    margin-left: 150px;
-}
 
-
-
-.mainpage-2{
-    padding-top: 80px;
-    padding-bottom: 200px;
-}
-
-.maintext{
-    color: #749BC2;
-    font-size: 60px;
-    text-align: center
-}
-
-.subtitle-2{
-    color: #5F707C;
-    font-size: 20px;
-    max-width: 1000px;      /* Максимальная ширина — не больше 1170px */
-    margin: 0 auto;         /* Отцентрировать по горизонтали */
-    padding-left: 20px;     /* Внутренние отступы (по желанию) */
-    padding-right: 20px;
-    text-align: center;
-}
 
 .AI{
     padding-top: 220px;
@@ -187,6 +168,8 @@ body {
 }
 
 
+/* -------------------------------------------------- */
+
 footer {
     color: #30465A;
     font-size: 18px;
@@ -194,3 +177,5 @@ footer {
     text-align: center;
     font-weight: 500;
 }
+
+/* -------------------------------------------------- */
