--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,12 @@ body {
 
 /* -------------------------------------------------- */
 
-.list img{
+.tennis{
     height: 347px;
     width: 347px;
+    position: absolute;
+    top: 1200px;
+    left: 150px;
 }
 
 /*текст в рамке*/
@@ -132,12 +135,12 @@ body {
 
 /* -------------------------------------------------- */
 
-.spisok img{
+.athletic{
+    position: absolute;
+    right: 0;
     height: 347px;
     width: 347px;
-    float: right; /* Выравнивание по правому краю */
-    margin: 0 0 5px 5px; /* Отступы вокруг фотографии */
-    right: 50px;
+    top: 1650px;
 
 }
 
@@ -176,10 +179,11 @@ body {
 }
 
 .AI-text {
-    margin-right: 50px;
+  margin-right: 20px;
+  margin-top: 5px;
   margin-left: auto;
   text-align: center;
-  font-size: 36px;
+  font-size: 40px;
   color: #30465A;
 }
 
@@ -192,6 +196,7 @@ body {
 
 .butten{
     background: #4682A9;
+    list-style-type: none;
     color: #FFFBDE;
     padding: 20px;        /* отступы внутри рамки */
     border-radius: 15px;
@@ -204,6 +209,8 @@ body {
     margin: 25px auto 0;      /* сверху 225px, по бокам auto → центр */
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
 }
+
+
 
 /* -------------------------------------------------- */
 
