--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 .header{
     background-color: #4682A9;
     color: #fffdef;              
-    padding: 6px 0;
+    height: 102px;
     width: 100%;
     position: fixed;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
@@ -31,8 +31,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 4px;
-    padding-bottom: 4px;
+    padding-top: 16px;
+    padding-bottom: 10px;
 }
 
 /* -------------------------------------------------- */
@@ -103,7 +103,7 @@ body {
     height: 347px;
     width: 347px;
     position: absolute;
-    top: 1200px;
+    top: calc(60px + 1140px);
     left: 150px;
 }
 
