--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ body {
 /* -------------------------------------------------- */
 
 
-/.AI {
+.AI {
   display: flex;
   align-items: flex-start;
   padding: 120px 0; /* чуть уменьшили отступы */
@@ -181,7 +181,7 @@ body {
 }
 
 .AI-text {
-  margin: -450px 50px 0 auto; /* правый отступ 50px, левый — auto → прижато вправо */
+  margin: 100px 50px 0 auto; /* правый отступ 50px, левый — auto → прижато вправо */
   text-align: center;
   font-size: 40px;
   color: #30465A;
@@ -213,7 +213,7 @@ body {
   border-radius: 15px;
   font-size: 30px;
   font-weight: 600;
-  margin: 50px 290px 0 auto;
+  margin: -10px 290px 0 auto;
   max-width: 500px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
@@ -226,6 +226,13 @@ footer {
     padding: 25px 0;
     text-align: center;
     font-weight: 500;
+}
+
+/* -------------------------------------------------- */
+
+.page{
+    padding-top: 80px;
+    padding-bottom: 100px;
 }
 
 /* -------------------------------------------------- */
