настраивание новой страницы

--- a/css/style.css
+++ b/css/style.css
@@ -235,4 +235,17 @@ footer {
     padding-bottom: 100px;
 }
 
+
+.subtitle_two{
+    color: #496F94;
+    font-size: 24px;
+    max-width: 1200px;      /* Максимальная ширина — не больше 1170px */
+    margin: 0 auto;         /* Отцентрировать по горизонтали */
+    padding-left: 20px;     /* Внутренние отступы (по желанию) */
+    padding-right: 20px;
+    text-align: center;
+}
+
+/* -------------------------------------------------- */
+
 /* -------------------------------------------------- */
