--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,53 @@ body {
 
 /* -------------------------------------------------- */
 
+
+/* Стили для ссылки с подсказкой */
+.custom-tooltip {
+  position: relative;
+
+  text-decoration: none;
+  color: #FFFBDE;
+}
+
+.custom-tooltip b {
+  text-decoration: none;
+}
+
+/* Всплывающая подсказка — стиль как на скриншоте */
+.custom-tooltip .tooltip-text {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed; /* ← ключевое изменение! */
+  top: 102px; /* высота вашего .header — под баннером */
+  left: 50%;
+  transform: translateX(-10%);
+  background-color: #fffdef;
+  color: #30465A;
+  padding: 20px 30px;
+  border-radius: 16px;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+  font-size: 21px;
+  line-height: 1.6;
+  width: 80%; /* фиксированная ширина относительно окна */
+  max-width: 750px;
+  text-align: center;
+  z-index: 1000;
+  white-space: normal;
+  word-wrap: break-word;
+  transition: opacity 0.25s ease, visibility 0.25s ease;
+}
+
+/* Показываем при наведении */
+.custom-tooltip:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
+
+
+
+/* -------------------------------------------------- */
+
 footer {
     color: #30465A;
     font-size: 18px;
