--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,15 @@ body {
   margin: -20px 290px 0 auto;
   max-width: 500px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  transition: 
+    transform 0.3s ease,
+    background-color 0.3s ease,
+    box-shadow 0.3s ease;
+}
+
+.butten:hover {
+  background-color: #4682A9;
+  transform: translateY(-3px);
 }
 
 /* -------------------------------------------------- */
@@ -307,15 +316,15 @@ footer {
 
 /* Основной контейнер загрузки */
 #upload-container {
-  margin: 20px auto;
+  margin: 16px auto;
   max-width: 1000px;
 }
 
 .upload-box {
   background-color: #4682A9;
-  padding: 40px; /* ← отступ от краёв со всех сторон */
+  padding: 24px 40px;
   border-radius: 50px;
-  border: 2px dashed #305669; /* ваш цвет рамки */
+  border: 3px dashed #305669; /* ваш цвет рамки */
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -331,8 +340,8 @@ footer {
 
 /* Иконка загрузки */
 .upload-icon {
-  width: 200px;
-  height: 200px;
+  width: 180px;
+  height: 180px;
 }
 
 /* Текст над кнопкой */
@@ -353,7 +362,6 @@ footer {
   font-size: 18px;
   cursor: pointer;
   transition: all 0.2s ease;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .file-button:hover {
