--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,6 @@ body {
 /* Стили для ссылки с подсказкой */
 .custom-tooltip {
   position: relative;
-
   text-decoration: none;
   color: #FFFBDE;
 }
@@ -297,7 +296,7 @@ footer {
 /* -------------------------------------------------- */
 
 .page{
-    padding-top: 80px;
+    padding-top: 65px;
     padding-bottom: 40px;
 }
 
@@ -322,16 +321,38 @@ footer {
 
 .upload-box {
   background-color: #4682A9;
-  padding: 24px 40px;
-  border: 3px dashed #305669; /* ваш цвет рамки */
+  height: 300px;
+  width: 900px;
+  position: relative;
+  padding: 20px;
   border-radius: 50px;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
+  gap: 20px;
   cursor: pointer;
   transition: background-color 0.2s ease;
+}
+
+/* Внутренняя пунктирная рамка — меньше блока */
+.upload-box::before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  border: 3px dashed #223f4d;
+  border-radius: 50px; /* чуть меньше, чем у блока */
+  pointer-events: none; /* не мешает кликам */
+  z-index: 0;
+}
+
+/* Чтобы контент не наезжал на рамку — оставить padding или использовать z-index */
+.upload-box > * {
+  position: relative;
+  z-index: 1;
 }
 
 .upload-box:hover {
