--- a/templates/SignSport-1.0.html
+++ b/templates/SignSport-1.0.html
@@ -57,7 +57,7 @@
             <li class="textspisok">Проанализировать почерк человека</li>
             <li class="textspisok">Загрузить данные отчета в нейросеть</li>
             <li class="textspisok">Получить долгожданный результат</li>
-            <li class="textspisok">При необходимости – задать вопрос нейросети (пока в разработке)</li>
+            <!--<li class="textspisok">При необходимости – задать вопрос нейросети (пока в разработке)</li>-->
             <img class="athletic" src="{{ url_for('static', filename='images/athlete.png') }}" alt="athlete">
         </ul>
     </div>
