--- a/static/css/style.css
+++ b/static/css/style.css
@@ -408,7 +408,7 @@ footer {
     width: 75%;
     height: 170px;
     padding: 12px;
-    margin: 16 0;
+    margin: 16px 0; /* ← исправлено: было "16 0", нужно "16px 0" */
     border: 1px solid #ccc;
     border-radius: 8px;
     font-family: inherit;
@@ -420,13 +420,14 @@ footer {
     background: #4682A9;
     color: white;
     border: none;
-    padding: 14px 32px;
+    padding: 12px 32px;
     font-size: 18px;        
     font-weight: 600;             
     border-radius: 12px; 
     cursor: pointer;
     transition: all 0.3s ease;
     box-shadow: 0 2px 6px rgba(70, 130, 169, 0.25);
+    margin-top: 20px;
 }
 
 .analyze-button:hover {
@@ -437,10 +438,12 @@ footer {
 
 /* Блок результата */
 #result {
-    margin: 32px auto;
+    margin: 60px auto;
+    font-size: 20px;
+    color: #FFFBDE;
     max-width: 800px;
-    padding: 24px;
-    background: #f0f8ff;
+    padding: 12px 32px;
+    background: #4682A9;
     border-radius: 10px;
     display: none;
 }
