--- a/templates/SignSport-1.0.html
+++ b/templates/SignSport-1.0.html
@@ -28,7 +28,7 @@
                     <a href="#" class="custom-tooltip">
                         <b>О нас</b>
                         <span class="tooltip-text">
-                            Нейросеть SignSport поможет вам выбрать подходящий для вас вид спорта, опираясь на ваш характер и личность! Загрузите файл нейросети и она предоставит вам долгожданный подробный ответ. Также, можно будет задать ей простые вопросы, связанные с характером и спортом.
+                            Нейросеть SignSport поможет вам выбрать подходящий для вас вид спорта, опираясь на ваш характер и личность! Загрузите данные нейросети и она предоставит вам долгожданный подробный результат!
                         </span>
                     </a>
                 </li>
@@ -39,14 +39,14 @@
     <div class="mainpage">
         <h1 class="maintext">Добро пожаловать на SignSport!</h1>
         <p class="subtitle">
-            <i>Подберём подходящий для вас вид спорта не только по вашей физической форме, но и по личностным особенностям, используя для этого анализ вашего почерка!</i>
+            <i>Подберём подходящий для вас вид спорта не по вашей физической форме, а по личностным особенностям, который определим используя для этого анализ вашего почерка!</i>
         </p>
         <img src="{{ url_for('static', filename='images/fencing.png') }}" alt="fencing">
     </div>
 
     <div class="text">
         <p>
-            Нейросеть <strong>SignSportNeuralNetwork 1.0 (сокращенно 2S2N 1.0)</strong> использует результаты графологического анализа почерка для определения вида спорта, который подходит вашему характеру — а не только физическим данным. Это уникальный подход, основанный на научных связях между почерком, личностью и предрасположенностью к определённым видам физической активности.
+            Нейросеть <strong>SignSportNeuralNetwork 1.0 (сокращенно 2S2N 1.0)</strong> использует результаты графологического анализа почерка (то есть картину вашего характера и личности) для определения вида спорта, который подходит вашему характеру — а не только физическим данным. Это уникальный подход, основанный на научных связях между почерком, личностью и предрасположенностью к определённым видам физической активности.
         </p>
     </div>
 
