--- a/templates/neural_network.html
+++ b/templates/neural_network.html
@@ -26,7 +26,7 @@
                     <a href="#" class="custom-tooltip">
                         <b>О нас</b>
                         <span class="tooltip-text">
-                            Нейросеть SignSport поможет вам выбрать подходящий для вас вид спорта, опираясь на ваш характер и личность! Загрузите файл нейросети и она предоставит вам долгожданный подробный ответ. Также, можно будет задать ей простые вопросы, связанные с характером и спортом.
+                            Нейросеть SignSport поможет вам выбрать подходящий для вас вид спорта, опираясь на ваш характер и личность! Загрузите данные нейросети и она предоставит вам долгожданный подробный результат!
                         </span>
                     </a>
                 </li>
